# astropixel

./: .readthedocs.yaml  README.md  catalog_querry.py  cutout.py  make_star_test.ipynb  plot_stars.py  pyproject.toml
astropixel/: catalog_querry.py  cutout.py  make_star.py  plot_stars.py
astropixel/docs/: catalog_querry.rst  conf.py  index.rst  requirements.txt
astropixel/docs/_build/doctrees/: catalog_querry.doctree  environment.pickle  index.doctree  make_star.doctree  plot_stars.doctree
astropixel/docs/_build/html/: .buildinfo  catalog_querry.html  genindex.html  index.html  make_star.html  objects.inv  plot_stars.html  py-modindex.html  search.html  searchindex.js
astropixel/docs/_build/html/_sources/: index.rst.txt  make_star.rst.txt  plot_stars.rst.txt
notebooks/: astropixel_example.ipynb  plotting.ipynb
tests/: test_catalog.py  tests.py
