[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astropixel"
version = "0.1.0"
description = "Astropixel project"
authors = ["Savannah Gramze <savannahgramze@ufl.edu>", "S M Rafee Adnan <smrafee.adnan@louisville.edu>"]

dependencies = [
    "astropy",
    "numpy",
    "matplotlib",
    python"
]
