[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astropixel"
version = "0.1.0"
description = "Astropixel project"
authors = ["Savannah Gramze <savannahgramze@ufl.edu>", "S M Rafee Adnan <smrafee.adnan@louisville.edu>"]

dependencies = [
    "astropy >= 4.3.0",
    "numpy >= 1.21.0",
    "matplotlib >= 3.4.2",
    python >=3.9"
]