[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astropixel"
version = "0.1.0"
description = "Astropixel project"
authors = [
    {name = "Savannah Gramze", email = "savannahgramze@ufl.edu"}, 
    {name = "S M Rafee Adnan", email = "smrafee.adnan@louisville.edu"},
    ]

dependencies = [
    "astropy >= 4.3.0",
    "numpy >= 1.21.0",
    "matplotlib >= 3.4.2",
    "python >=3.9",
    "spectral-cube >= 0.6.5",
    "regions >= 0.9"
]